--- a/index.html
+++ b/index.html
@@ -20,6 +20,48 @@
 </head>
 
 <body>
+  <main>
+    <div class="container-holder-one">
+      <!-- CONTAINER 1 -->
+      <div class="container-one">
+        <nav class="navbar">
+          <ul>
+            <li class="title"><a href="#">room</a></li>
+            <li><a href="#">home</a></li>
+            <li><a href="#">shop</a></li>
+            <li><a href="#">about</a></li>
+            <li><a href="#">contact</a></li>
+          </ul>
+        </nav>
+      </div>
+      <!-- CONTAINER 2 -->
+      <div class="container-two">
+        <h1>Discover innovative ways to decorate</h1>
+        <p>We provide unmatched quality, comfort, and style for property owners across the country. Our experts combine
+          forms
+          and function in bringing your visions to life. Create a room in your own style with our collection and make
+          your
+          property a reflection of you and what you love.</p>
+        <h4>
+          <a class="shop-now" href="#">SHOP NOW</a>
+          <a class="arrow" href="#">&rarr;</a>
+        </h4>
+      </div>
+      <div class="arrows">
+        <h1>
+          <a href="#"><i class="fa-solid fa-chevron-left"></i><i class="fa-solid fa-chevron-right"></i></a>
+        </h1>
+      </div>
+    </div>
+    <div class="container-holder-two">
+      <div class="container-three"></div>
+      <div class="container-four">
+        <h2>ABOUT OUR FURNITURE</h2>
+        <P>Our multifunctional collection blends design and function to suit your individual taste. Make each room unique, or pick a cohesive theme that best express your interests and what inspires you. Find the furniture pieces you need, from traditional to contemporary styles or anything in between. Product specialists are available to help you create your dream space.</P>
+      </div>
+      <div class="container-five"></div>
+    </div>
+  </main>
 </body>
 
 </html>
